# guroobi

./: README.md  dune-project  guroobi.opam
lib/: dune  gurobi_stubs.c  key.ml  key.mli  params.ml  params.mli  raw.ml  utils.ml
test/: bilinear.expected  bilinear.ml  dense.expected  dense.ml  diet.ml  dune  facility.expected  facility.ml  feasopt.expected  feasopt.ml  fixanddive.expected  fixanddive.ml  gc_pwl_func.expected  gc_pwl_func.ml  genconstr.expected  genconstr.ml  mip1.expected  mip1.ml  multiobj.expected  multiobj.ml  multiscenario.expected  multiscenario.ml  params.ml  params.mli  piecewise.expected  piecewise.ml  poolsearch.expected  poolsearch.ml  qcp.ml  qp.expected  qp.ml  sos.expected  sos.ml  sudoku.expected  sudoku.ml  u.ml  workforce1.ml  workforce2.expected  workforce2.ml  workforce3.expected  (+5 more)
test/data/: qafiro.mps  stein9.mps
tests/unit/: diet.expected  diet.ml  dune  mip1.ml  multiobj.ml  utils.ml  workforce1.expected  workforce1.ml
